changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
PeterM:  2000/11/17
define.h spells.h spellist.h spell_util.c spell_effect.c:
  windstorm spell implemented.
attack.c:  saving throw behavior modified.  Items take a bit
of DAM to destroy now instead of being destroyed with 1hp attacks.

MSW: 2000/11/16:
socket/metaserver.c: Add #ifdef MSG_DONTWAIT into metaserver.c for systems 
	that lack that definition.
random_maps/style.c: alphasort was not properly de-referencing pointers
	when doing name comparisons, and thus returned garbage results,
	resulting in a crash when entering random maps.  This only happens
	for systems which lack scandir in normal libraries (like Solaris).
	BSDs and linux have scandir built in, and did not have a problem.
server/disease.c: fix infect_object - server would crash if player did
	not have praying skill and was infecting someone else.
end of changes, MSW 2000/11/16

PeterM : 2000/11/14
PeterM: Made some changes so that non-disease effects may be done without
being labelled as a disease.  Also, fixed a bug in which we'd kill something
and then try to insert something in the killed thing's map.



metaserver update:
common/init.c: Add meta_ fields to settings structure initialization.
include/global.h: Add meta_ fields to settings structure.
include/sockproto.h: Updated for new meta_ functions.
lib/Makefile.in: Have it install settings file.
lib/settings: Default settings file with some metaserver default value.s
server/init.c: Add load_settings file.  Add call to metaserver_init.
server/main.c: Add call to metaserver_update in do_specials.
socket/Makefile.in: Add metaserver.c to list of files.